# M365Copilot-FoundryAgent-APIM-ACA_MCP-DB

./: .dockerignore  .env.example  .env.sample  .gitignore  .prettierignore  AGENTS.md  Dockerfile  README.md  azure.yaml  package.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/agents/: factchecker.agent.md  inventory.agent.md  zenn-reviewer.agent.md  zenn-writer.agent.md
.github/instructions/: infrastructure.instructions.md  markdown.instructions.md  python-fastapi.instructions.md  security.instructions.md
.github/prompts/: add-endpoint.prompt.md  fix-ai-style.prompt.md  full-review.prompt.md  security-review.prompt.md  sns-post.prompt.md
.github/skills/apim-mcp-setup/: SKILL.md
.github/skills/enterprise-security/: SKILL.md
.github/skills/m365-publish/: SKILL.md
.github/skills/zenn-article-review/: SKILL.md
.github/skills/zenn-factcheck/: SKILL.md
.github/skills/zenn-writing-style/: SKILL.md
.github/workflows/: ci.yml
docs/: enterprise-security.md
infra/: main.bicep  main.parameters.json
infra/core/: acr.bicep  alerts.bicep  apim.bicep  container-apps.bicep  defender.bicep  foundry.bicep  grafana-dashboard.bicep  keyvault.bicep  network.bicep  portal-dashboard.bicep  sql.bicep  workbook.bicep
scripts/: apply-mcp-policy.sh  create_agent.py  grant_sql_access.py  inventory-api-app-roles.json  load_data.py  mcp-policy.json  postprovision.py  setup-entra.sh  setup.sql  setup_mi_user.py  smoke_test.ps1  test_agent.py
src/: main.py  requirements.txt
tests/: test_api.py
(+1 files in other folders)
